# libpag

./: .gitignore  build_linux.sh  build_node.sh  libpag.podspec
assets/: paizhao.pag
ios/PAGViewer/: BLUR30.pag
ios/PAGViewer.xcodeproj/xcshareddata/xcschemes/: PAGViewer.xcscheme
ios/PAGViewer/Classes/: PAGPlayerView.m  ViewController.mm
linux/: CMakeLists.txt
linux/src/: main.cpp
node/: CMakeLists.txt  README.md  env-config.sh  node-pag.cpp  node-pag.js  package-lock.json  package.json
src/base/effects/: FastBlurEffect.cpp
src/base/utils/: MathUtil.h
src/rendering/: PAGPlayer.cpp  PAGSurface.cpp
src/rendering/caches/: RenderCache.cpp
src/rendering/filters/: LayerFilter.cpp
src/rendering/filters/dropshadow/: DropShadowFilter.cpp
src/rendering/filters/gaussblur/: GaussBlurFilter.cpp  SinglePassBlurFilter.cpp  SinglePassBlurFilter.h
src/rendering/filters/gaussianblur/: GaussianBlurDefines.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GaussianBlurFilterPass.cpp  GaussianBlurFilterPass.h  GaussianBlurShader.h  GaussianBlurShaders.h
src/rendering/filters/utils/: BlurTypes.h
src/rendering/renderers/: FilterRenderer.cpp  FilterRenderer.h  TextRenderer.h
tgfx/include/core/: Point.h
tgfx/include/gpu/: Canvas.h  Context.h
tgfx/src/core/: PathRef.h
tgfx/src/core/vectors/: AATriangulator.cpp  AATriangulator.h  Geometry.cpp  Geometry.h  Triangulator.cpp  Triangulator.h
tgfx/src/core/vectors/coregraphics/: CGMask.cpp
tgfx/src/core/vectors/freetype/: FTMask.cpp
tgfx/src/gpu/: Canvas.cpp  ColorShader.cpp  DefaultGeometryProcessor.cpp  DefaultGeometryProcessor.h  LocalMatrixShader.h
tgfx/src/gpu/opengl/: GLCanvas.cpp  GLCanvas.h  GLDefaultGeometryProcessor.cpp  GLDefaultGeometryProcessor.h  GLDrawer.cpp  GLFillRectOp.h  GLRRectOp.h  GLSurface.cpp  TriangulatingPathOp.cpp  TriangulatingPathOp.h
tgfx/src/gpu/opengl/eagl/: EAGLHardwareBuffer.mm
web/: MY_README.md  package.json
web/demo/: benchmarks.ts
web/script/: build.sh
web/src/: pag-player.ts  pag-surface.ts  pag-view.ts
web/src/core/: pag-gl-framebuffer.ts  scaler-context.ts  web-mask.ts
web/src/utils/: ua.ts
